# solarphunk

./: .gitignore  IDEAS.md  README.md  autonomous-blog-dream-feature.md  autonomous-blog-planning-prompt.md  infer-api.md  pipeline.py  pyproject.toml  run.py
agents/: dream.py  edit.py  model_selector.py  publish.py  research.py
config/: blog.yaml
drafts/: 2026-04-02-ai-proforestation-and-the-economics-of-regeneration.md  2026-04-02-resource-allocation-for-a-solarpunk-future.md  2026-04-02-reverse-game-theory-a-new-dawn-for-community-organizing.md
lib/: config.py  feeds.py  hugo.py  llm.py  state.py
prompts/: dream_synthesis.txt  edit_judge.txt  edit_rewriter.txt  research_filter.txt
research/: 2026-04-02-a-repository-of-hope-amid-an-authoritarian-moment.json  2026-04-02-ai-agents-are-recruiting-humans-to-observe-the-offline-world.json  2026-04-02-at-what-risk-will-we-resist.json  2026-04-02-building-a-future-when-empire-is-obsolete.json  2026-04-02-burning-questions-wheres-the-leverage-to-address-compounding.json  2026-04-02-finding-home-part-ii-food.json  2026-04-02-finding-life-in-the-flux.json  2026-04-02-how-reverse-game-theory-could-solve-the-housing-shortage.json  2026-04-02-how-to-allocate-finite-resources-in-a-solarpunk-way.json  2026-04-02-hungry-for-democracy.json  2026-04-02-inside-the-off-grid-earthship-community-in-new-mexico-youtub.json  2026-04-02-limiting-not-just-screen-time-but-screen-space.json  2026-04-02-messages-of-fierce-hope-from-the-global-south.json  2026-04-02-proforestation-beyond-the-human-forests-climate-emergency-an.json  (+130 more)
(+40 files in other folders)
